--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -18,7 +18,10 @@ $sombraLight: 10px 10px 20px rgba(0,0,0,.16);
 body {
 	background: #F1F1F1;
 	font-family: 'Roboto', sans-serif;
-	transition: .3s ease all;
+	transition: .8s ease all;
+	&.dark{
+		background: $negro;
+	}
 }
 
 a {
@@ -45,6 +48,18 @@ nav {
 	transition: .3s ease all;
 	box-shadow: $sombraDark;
 
+	body.dark &{
+		background: $grisOscuro;
+		box-shadow: $sombraLight;
+		a{
+			color:$grisClaro;
+			&:hover{
+				transition: .9s ease all;
+				color: #fff;
+			}
+		}
+	}
+
 	.logotipo {
 		font-weight: 700;
 		font-family: 'Roboto', sans-serif;
@@ -63,7 +78,47 @@ nav {
 }
 
 // ----- ----- ----- ----- ----- Switch ----- ----- ----- ----- ----- 
-
+.switch {
+	background: #343D5B;
+	border-radius: 1000px;
+	border: none;
+	position: relative;
+	cursor: pointer;
+	display: flex;
+	outline: none;
+	transition: .8s ease-in-out;
+	&::after{
+		content: "";
+		display: block;
+		background: #f1f1f1;
+		width: 30px;
+		height: 30px;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: unset;
+		border-radius: 100px;
+		transition: .3s ease all;
+		box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, .2);		
+	}
+	&.active{		
+		transition: .8s ease-in-out;
+		background: orange;
+		color:#000;
+		&::after{
+			right: 0;
+			left: unset;
+		}
+	}
+	span{
+		width: 30px;
+		height: 30px;
+		line-height: 30px;
+		display: block;
+		background: none;
+		color: #fff;
+	}
+}
 
 // ----- ----- ----- ----- ----- GRID ----- ----- ----- ----- ----- 
 
@@ -83,6 +138,11 @@ nav {
 		min-height: 195px;
 		margin-top: 50px;
 		transition: .3s ease all;
+
+		body.dark & {
+			background: $grisOscuro;
+			box-shadow: $sombraLight;
+		}
 	
 		img {
 			vertical-align: top;
